tests/paczka1/fuzzy1/29864261.err
Error in line 10: A483 A159 37,7
Error in line 22: mSg A483 31,3
Error in line 30: A7gAy A4[3 422,0
Error in line 20: A7gAy A483 88,1
Error in line 25: 5u0Otg S542 25,8
Error in line 32: A7gAy S75 60,3
